<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fontify="http://schemas.android.com/apk/res-auto"
    xmlns:errorview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEC6CC"
    >

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/reciclador"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:scrollbars="vertical" />

    <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
        android:id="@+id/loading"
        android:layout_centerInParent="true"
        app:mlpb_progress_stoke_width="3dp"
        app:mlpb_progress_color="@color/colorPrimary"
        android:layout_width="50dp"
        android:layout_height="50dp"/>


    <tr.xip.errorview.ErrorView
        android:visibility="gone"
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        errorview:ev_title="@string/Oops"
        errorview:ev_subtitle="@string/ErrorConneting"
        errorview:ev_retryButtonText="@string/Retry"
        errorview:ev_showTitle="true"
        errorview:ev_showSubtitle="true"
        />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <include
            layout="@layout/toolbar_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

</RelativeLayout>